--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +9,25 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Cesarfolio</title>
 	</head>
 	<body>
+		<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]">
+		</div>
 		<slot />
 	</body>
 </html>
 
 <style>
+	@import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap');
+
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		color: black;
+		font-family: 'Darumadrop One';
+		z-index: 0;
 	}
 </style>
