--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Aurora from "../components/Aurora";
 ---
 
 <!doctype html>
@@ -11,23 +12,28 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		<title>Cesarfolio</title>
 	</head>
-	<body>
-		<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px]">
-		</div>
-		<slot />
+	<body class="bg-black w-screen relative">
+		<span class="absolute top-0 left-0 w-full h-full z-10 *:z-10">
+			<Aurora
+			colorStops={["#3A29FF", "#FF94B4", "#FF3232"]}
+			blend={0.5}
+			amplitude={1.0}
+			speed={0.5}
+			client:load
+		  />
+		</span>
+		<slot class="z-20 *:z-40" />
 	</body>
 </html>
 
 <style>
-	@import url('https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap');
-
+	@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
-		color: black;
-		font-family: 'Darumadrop One';
-		z-index: 0;
+		font-family: 'Poppins', sans-serif;
+		color: white;
 	}
 </style>
