--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Aurora from "../components/Aurora";
+import Analytics from '@vercel/analytics/astro'
 ---
 
 <!doctype html>
@@ -13,6 +14,7 @@ import Aurora from "../components/Aurora";
 		<title>Cesarfolio</title>
 	</head>
 	<body class="bg-black w-screen relative">
+		<Analytics/>
 		<span class="absolute top-0 left-0 w-full h-full z-10 *:z-10">
 			<Aurora
 			colorStops={["#3A29FF", "#FF94B4", "#FF3232"]}
