--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Chat from "../components/chat.tsx";
 		<title>Cesarfolio</title>
 	</head>
 	<body class="bg-black w-screen h-screen relative">
-        <main class="text-white tracking-widest w-4/5 h-full p-20">
+        <main class="text-white tracking-widest w-4/5 max-md:w-full max-md:p-10 h-full p-20">
             <Chat client:load />
         </main>
 	</body>
